feat(85): RSR-434 - Create ControlBlocks
Signed-off-by: massifben <105049157+massifben@users.noreply.github.com>