@@ -7,21 +7,20 @@ package org.lfenergy.compas.sct.commons.dto;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import org.apache.commons.lang3.StringUtils;
 import org.lfenergy.compas.scl2007b4.model.*;
 import org.lfenergy.compas.sct.commons.exception.ScdException;
-import org.lfenergy.compas.sct.commons.scl.SclRootAdapter;
 import org.lfenergy.compas.sct.commons.scl.ied.IEDAdapter;
-import org.lfenergy.compas.sct.commons.scl.ied.LDeviceAdapter;
+import org.lfenergy.compas.sct.commons.util.ControlBlockEnum;
 
 import java.util.ArrayList;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * A representation of the model object <em><b>ControlBlock</b></em>.
- * @param <T> input such as {@link org.lfenergy.compas.sct.commons.dto.GooseControlBlock <em>GooseControlBlock</em>},
- *          {@link org.lfenergy.compas.sct.commons.dto.ReportControlBlock <em>ReportControlBlock</em>},
- *          {@link org.lfenergy.compas.sct.commons.dto.SMVControlBlock <em>SMVControlBlock</em>},
+ * - {@link org.lfenergy.compas.sct.commons.dto.GooseControlBlock <em>GooseControlBlock</em>},
+ * - {@link org.lfenergy.compas.sct.commons.dto.ReportControlBlock <em>ReportControlBlock</em>},
+ * - {@link org.lfenergy.compas.sct.commons.dto.SMVControlBlock <em>SMVControlBlock</em>},
  * <p>
  * The following features are supported:
  * </p>
@@ -31,8 +30,7 @@ import java.util.stream.Collectors;
  *   <li>{@link ControlBlock#getDataSetRef() <em>dataSetRef</em>}</li>
  *   <li>{@link ControlBlock#getDesc() <em>Desc</em>}</li>
  *   <li>{@link ControlBlock#getConfRev() <em>Refers To confRev</em>}</li>
- *   <li>{@link ControlBlock#getIedNames() <em>Refers To IedNames</em>}</li>
- *   <li>{@link ControlBlock#getSecurityEnable() <em>Refers To security Enable</em>}</li>
+ *   <li>{@link ControlBlock#getTargets() <em>Refers To IedNames</em>}</li>
  * </ul>
  *
  * @see org.lfenergy.compas.scl2007b4.model.TControlBlock
@@ -40,45 +38,47 @@ import java.util.stream.Collectors;
 @Getter
 @Setter
 @NoArgsConstructor
-public abstract class ControlBlock<T extends ControlBlock> extends LNodeMetaDataEmbedder {
+public abstract class ControlBlock extends LNodeMetaDataEmbedder {
 
-    protected String id; /// appID or smvID
+    protected String id; /// appID or smvID or rptID
     protected String name;
     protected String dataSetRef;
     protected String desc;
-    protected Long confRev;
-    protected List<TControlWithIEDName.IEDName> iedNames = new ArrayList<>();
-    protected TPredefinedTypeOfSecurityEnum securityEnable = TPredefinedTypeOfSecurityEnum.NONE;
-
-    /**
-     * Abstract method for getting classe type
-     * @return classe type
-     */
-    protected abstract Class<T> getClassType();
+    protected Long confRev = 10000L;
+    protected List<ControlBlockTarget> targets = new ArrayList<>();
 
     /**
      * Get ServiceType
      * @return ServiceType enum object
+     * @deprecated TServiceType provides  REPORT, SMV, GOOSE and POLL. It does not provide "LOG" for LogControl and provides "POLL" which is not a valid
+     * ControlBlock type. Use getControlBlockEnum() instead.
+     * @see ControlBlock#getControlBlockEnum()
      */
-    public abstract TServiceType getServiceType();
-
-    public abstract <U extends TControl> U createControlBlock();
-
-    /**
-     * Cast object to specified type
-     * @param obj object to cast
-     * @return object casted on specified type
-     */
-    public T cast(Object obj){
-        if (!obj.getClass().isAssignableFrom(getClassType())) {
-            throw new UnsupportedOperationException("Cannot cast object to " + getClassType());
-        }
-        return (T) obj;
+    @Deprecated(since = "16/01/2023")
+    public TServiceType getServiceType() {
+        return switch (getControlBlockEnum()){
+            case GSE -> TServiceType.GOOSE;
+            case SAMPLED_VALUE -> TServiceType.SMV;
+            case REPORT -> TServiceType.REPORT;
+            default -> throw new IllegalArgumentException("Unsupported ControlBlockEnum : " + getControlBlockEnum());
+        };
     }
 
     /**
+     * Get ControlBlockEnum
+     * @return ControlBlockEnum of the instance
+     */
+    public abstract ControlBlockEnum getControlBlockEnum();
+
+    /**
+     * Map the object to TControl
+     * @return new instance of TControl element with all the attributes copied from the current object
+     */
+    public abstract TControl toTControl();
+
+    /**
      * Validate Control block structure
-     * @throws ScdException
+     * @throws ScdException when ControlBlock structure is not valid
      */
     public void validateCB() throws ScdException {
 
@@ -90,44 +90,17 @@ public abstract class ControlBlock<T extends ControlBlock> extends LNodeMetaData
             throw new ScdException("A required field is missing:  name");
         }
 
-        if(iedNames.stream().anyMatch( iedName -> iedName == null ||
-                iedName.getValue() == null || iedName.getValue().isBlank() ||
-                iedName.getLdInst() == null || iedName.getLdInst().isBlank())) {
+        if(targets.stream().anyMatch(
+            target -> target == null || StringUtils.isBlank(target.iedName()) ||
+            StringUtils.isBlank(target.ldInst()))) {
             throw new ScdException("Control block destination IEDs are not well defined");
         }
     }
 
     /**
-     * Check Control block's destination is present in SCD file
-     * @param sclRootAdapter main adapter containing SCD file
-     * @throws ScdException
-     */
-    public void validateDestination(SclRootAdapter sclRootAdapter) throws ScdException {
-        for(TControlWithIEDName.IEDName iedName : iedNames){
-            IEDAdapter iedAdapter =sclRootAdapter.getIEDAdapterByName(iedName.getValue());
-            LDeviceAdapter lDeviceAdapter = iedAdapter.findLDeviceAdapterByLdInst(iedName.getLdInst())
-                    .orElseThrow(
-                            () -> new ScdException(
-                                    String.format(
-                                            "Control block destination: Unknown LDevice [%s] in IED [%s]",
-                                            iedName.getLdInst(),iedName.getValue()
-                                    )
-                            )
-                    );
-            if (iedName.isSetLnClass()) {
-                try {
-                    lDeviceAdapter.getLNAdapter(iedName.getLnClass().get(0), iedName.getLnInst(), iedName.getPrefix());
-                } catch (ScdException e) {
-                    throw new ScdException("Control block destination: " + e.getMessage());
-                }
-            }
-        }
-    }
-
-    /**
      * Check if Security is enabled in IED (Services)
-     * @param iedAdapter IED adapter containing IED datas
-     * @throws ScdException
+     * @param iedAdapter IED adapter containing IED data
+     * @throws ScdException when ControlBlock Security is not consistent
      */
     public final void validateSecurityEnabledValue(IEDAdapter iedAdapter) throws ScdException {
         TServices tServices = iedAdapter.getServices();
@@ -135,40 +108,23 @@ public abstract class ControlBlock<T extends ControlBlock> extends LNodeMetaData
     }
 
     /**
-     * Get ConfRev value
+     * Get ConfRev value.
+     *  ConfRev is 0 for newly created control blocks without data set reference
      * @return confRev long value
      */
-    protected Long getConfRev() {
-        if(dataSetRef == null || dataSetRef.isBlank()){
+    public Long getConfRev() {
+        if(StringUtils.isBlank(dataSetRef)){
             return 0L;
         }
-        return 10000L ;
+        return confRev;
     }
 
     /**
      * Abstract method to check validity of Security Enable state for Control blocks
      * @param tServices Service object
-     * @throws ScdException
+     * @throws ScdException when ControlBlock Security is not consistent
      */
     protected abstract void validateSecurityEnabledValue(TServices tServices) throws ScdException;
-
-    /**
-     * Create Control block iedName element from ClientLN element
-     * @param clientLN property ClientLN
-     * @return IEDName of Control
-     */
-    public static TControlWithIEDName.IEDName toIEDName(TClientLN clientLN){
-
-        TControlWithIEDName.IEDName iedName = new TControlWithIEDName.IEDName();
-        iedName.setValue(clientLN.getIedName());
-        iedName.setApRef(clientLN.getApRef());
-        iedName.setLdInst(clientLN.getLdInst());
-        iedName.setPrefix(clientLN.getPrefix());
-        iedName.setLnInst(clientLN.getLnInst());
-        iedName.getLnClass().addAll(clientLN.getLnClass());
-
-        return iedName;
-    }
 
     /**
      * Get Control block settings from Service
@@ -179,35 +135,34 @@ public abstract class ControlBlock<T extends ControlBlock> extends LNodeMetaData
         if(tServices == null) {
             return TServiceSettingsNoDynEnum.FIX;
         }
-
-        if (getServiceType() == TServiceType.GOOSE && tServices.getGSESettings() != null){
-            return tServices.getGSESettings().getCbName();
-        }
-        if(getServiceType() == TServiceType.SMV && tServices.getSMVSettings() != null){
-            return tServices.getSMVSettings().getCbName();
-        }
-        if(getServiceType() == TServiceType.REPORT && tServices.getReportSettings() != null){
-            return tServices.getReportSettings().getCbName();
-        }
-        return TServiceSettingsNoDynEnum.FIX;
+        return switch (getControlBlockEnum()){
+            case GSE -> (tServices.getGSESettings() != null) ? tServices.getGSESettings().getCbName() : TServiceSettingsNoDynEnum.FIX;
+            case SAMPLED_VALUE -> (tServices.getSMVSettings() != null) ? tServices.getSMVSettings().getCbName() : TServiceSettingsNoDynEnum.FIX;
+            case REPORT -> (tServices.getReportSettings() != null) ? tServices.getReportSettings().getCbName() : TServiceSettingsNoDynEnum.FIX;
+            default -> TServiceSettingsNoDynEnum.FIX;
+        };
     }
 
     /**
-     * Get Control block
-     * @return Control block's string value from IEDNames
+     * Add the ControlBlock to an LN or LN0 element
+     * @param tAnyLN tLN or tLNO element
+     * @return the added TControl
      */
-    @Override
-    public String toString() {
-        String values = iedNames.stream().map(TControlWithIEDName.IEDName::getValue)
-                .collect(Collectors.joining(","));
-        return "ControlBlock{" +
-                "id='" + id + '\'' +
-                ", name='" + name + '\'' +
-                ", dataSetRef='" + dataSetRef + '\'' +
-                ", desc='" + desc + '\'' +
-                ", confRev=" + confRev +
-                ", iedNames=" + values +
-                ", securityEnable=" + securityEnable +
-                '}';
+    public abstract TControl addToLN(TAnyLN tAnyLN);
+
+    /**
+     * Copy a TProtocol object
+     * @param tProtocol input instance
+     * @return new instance of tProtocol with the same fields as input
+     */
+    protected static TProtocol copyProtocol(TProtocol tProtocol){
+        if (tProtocol == null) {
+            return null;
+        }
+        TProtocol newTProtocol = new TProtocol();
+        newTProtocol.setValue(tProtocol.getValue());
+        newTProtocol.setMustUnderstand(tProtocol.isMustUnderstand());
+        return newTProtocol;
     }
+
 }
